Ensured image height is constrained on small screens

--- a/src/styles/_poses.scss
+++ b/src/styles/_poses.scss
@@ -76,5 +76,9 @@ yf-pose {
   max-width: 100%;
   height: auto;
   object-fit: contain;
-  max-height: 50vh;
+
+  max-height: 40vh;
+  @include large-screen {
+    max-height: 50vh;
+  }
 }
